# KernelArena

./: .gitignore  Makefile  README.md  conftest.py  generate_data.py  input_generators.py  plots.py  pyproject.toml  report.py  submit.py
gpflow/: conftest.py  test_matern.py  test_se.py
gpjax/: conftest.py  test_matern.py  test_se.py
gpy/: conftest.py  test_matern.py  test_se.py
gpytorch/: conftest.py  test_matern.py  test_se.py
kernax/: conftest.py  test_matern.py  test_se.py
requirements/: general.txt  gpflow.txt  gpjax.txt  gpy.txt  gpytorch.txt  kernax.txt  report.txt  sklearn.txt
results/apple-m4-max_float32_2026-03-30/: gpflow.json  gpjax.json  gpy.json  gpytorch.json  kernax.json  run_info.json  sklearn.json
results/intel-r-core-tm-i7-10870h-cpu-2-20ghz_float64_2026-03-30_gpu/: gpflow.json  gpjax.json  gpy.json  gpytorch.json  kernax.json  run_info.json  sklearn.json
sklearn/: conftest.py  test_matern.py  test_se.py
